# umink

src/services/sysagent/plugins/lua/: Makefile.am  mink_lua.c  plg_sysagent_lua.c  umink.lua
